# jp-aesthetic-terminal

./: .flake8  .readthedocs.yml  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: draft.yml  release-drafter.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/jp_aesthetic_terminal/: __init__.py  console.py  test.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
