[tool.poetry]
name = "jp_aesthetic_terminal"
version = "0.1.0"
authors = ["Anthony Khoudary <ankhoudary12@gmail.com>"]
description = "Program for displaying Random Japanese Text in the terminal"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ankhoudary12/jp-aesthetic-terminal"
repository = "https://github.com/ankhoudary12/jp-aesthetic-terminal"
keywords = ["japenese","aesthetic"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
